####################
PloneArticle Changes
####################

SVN Unreleased
##############

* Fix pa_browser url : url is no more depending on base href
  [macadames] 2009-06-05


4.1.4
#####

* Identical release (egg generation failed)
  [glenfant]

4.1.3
#####

* IE6 fix for the javascript image viewer

* Fix migration path for all 4.1 releases
  [encolpe] 2009-02-26

4.1.2
#####

* Added russian translation, thanks to Roman Susi.
  [glenfant] 2009-01-30
  
* Activate collapsible sections after reloading model view in ajax
  [macadames] 2009-02-04
     
Take care : 4.1.1 egg was containing an old file : kssregistry.xml
A bug with collective.releaser ?

4.1.1
#####

* Kss inline edit for proxies (images, files, links)
  replaced by jQuery methods
  This resolve getSiteManager error with iw.fss in kss server views (strange bug)
  [macadames] 2009-01-22
  
* When editing proxies fields and closing ajax window very fast, the page was 
  not fresh because processForm was not finished.
  To close edit window  just call Proxy.SaveForm(closEditWindow=true)  
  [macadames] 2009-01-24
  
* css corrections and improvements for models
  [macadames] 2009-01-24  
  
* css improvements + small jq effects on light boxes added
  [macadames] 2009-01-24    
  
* relaunch Lightboxes after ajax replace Model View (small bug fix)
  [macadames] 2009-01-24    
  
* some css IE fixes :
  kss-spinner is invisible under IE6
  some minor MSIE layout bugfixes (browser, kss-menu hover, proxies edit layout ...)
  [macadames] 2009-01-24
  
* move all proxies inline edit javascript from pa_model.js 
  to pa_baseinnercontentwidget.js
  [macadames] 2009-01-24
  
* fix bug in browser with meta_type and Folder
  in Plone3.1 folder.portal_type != folder.meta_type  
  [macadames] 2009-01-24
  
* Added getLinkIcon method in links proxies
  used in models macros et editwidget macros  
  [macadames] 2009-01-24
  
* Fix javascript error in edit proxies widget (javascript)